<resources>
    <string name="app_name">FoodApp</string>
    <string name="contraHint">Contraseña*</string>
    <string name="telefonoHint">Correo Electronico*</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrarseRegistro">REGISTRARSE</string>
    <string name="recupCuenta">Recuperar Cuenta</string>
    <string name="iniciarSesion">INICIAR SESIÓN</string>
    <string name="recordarCuenta">Recordar Cuenta</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre*</string>
    <string name="apellidoPat">Apellido Paterno*</string>
    <string name="apellidoMat">Apellido Materno*</string>
    <string name="sexo">Sexo*</string>
    <string name="fechaNac">Fecha de Nacimiento: (00/00/0000)*</string>
    <string name="infoInicioSesion">Información de inicio de sesión</string>
    <string name="recuperar">Recuperar</string>
    <string name="title_activity_menu_principal">Menu_Principal</string>
    ///Menu///
    <string name="title_inicio">Inicio</string>
    <string name="title_categorias">Categorias</string>
    <string name="title_perfil">Perfil</string>
    //////////
    <string name="recomendados">Recomendados para ti</string>
    <string name="busqueda">¿Qué quieres comer?</string>
    <string name="categorias">Categorias</string>
    <string name="usuario">Vicente Elias Zambada</string>
    <string name="ubicaciones">Ubicaciones</string>
    <string name="carrito">Tu carrito</string>
    <string name="regExitoso">Registro Exitoso</string>
    <string name="graciasRegistro">¡Gracias por registrarte, bienvenido a  FeedMe!</string>
    <string name="editPerfil">Editar Perfil</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>