<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/logo_imagen" />

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/telefonoHint"
            android:inputType="number"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textColorHint="@color/gris_primario" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/contraHint"
            android:inputType="textPassword"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:textColorHint="@color/gris_primario" />

        <Button
            android:id="@+id/ButtonIS"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/naranja_primario"
            android:text="@string/iniciarSesion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="10dp"
                android:text="@string/recordarCuenta" />

            <Button
                android:id="@+id/ButtonRecuperarCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gris_primario"
                android:text="@string/recupCuenta" />

        </LinearLayout>

        <Button
            android:id="@+id/ButtonRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:backgroundTint="@color/gris_primario"
            android:gravity="center"
            android:text="@string/registrarse" />

    </LinearLayout>
</LinearLayout>